:technologist: About section
add new about section

--- a/css/style.css
+++ b/css/style.css
@@ -42,15 +42,21 @@ p,span{
 
 /*hero*/
 
+.my__hero{
+  margin: 5rem 0;
+}
+
 .my__hero--image{
   display: flex;
   justify-content: center;
   margin-top: 0.5rem;
+  height: 20rem;
+  width: auto;
 } 
 
 .my__hero--image img{
   padding: 0.1rem;
-  border: 5px solid black;
+  border: 2px solid var(--secondary-text);
 }
 
 .my__hero--content{
@@ -72,7 +78,18 @@ p,span{
 }
 
 
+/*About*/
 
+.about__box--card i{
+  font-size: 2rem;
+  color: var(--primary-text);
+}
+.about__box--card--experience, .about__box--card--education  {
+  border: 1px solid var(--primary-text);
+  border-radius: 1.5rem;
+  padding: 1rem;
+  text-align: center;
+}
 
 
 
