--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ p,span{
 
 .my__hero--image img{
   padding: 0.1rem;
-  border: 2px solid var(--secondary-text);
+  border: 1px solid var(--secondary-text);
 }
 
 .my__hero--content{
@@ -85,11 +85,29 @@ p,span{
   color: var(--primary-text);
 }
 .about__box--card--experience, .about__box--card--education  {
-  border: 1px solid var(--primary-text);
+  border: 1px solid var(--secondary-text);
   border-radius: 1.5rem;
   padding: 1rem;
   text-align: center;
 }
 
+/*Experience*/
+.experience__box{
+  border: 1px solid var(--secondary-text);
+  border-radius: 1rem;
+  padding: 2rem;
+}
+
+.experience__box i{
+  font-size: 5rem;
+  color: var(--secondary-text);
+  margin: 0.8rem;
+}
+
+.experience i:hover{
+  color: var(--primary-text);
+  cursor:pointer;
+  transition: 0.5s;
+}
 
 
